--- a/src/main/resources/com/example/javafxdemo/hello-view.fxml
+++ b/src/main/resources/com/example/javafxdemo/hello-view.fxml
@@ -1,16 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.javafxdemo.HelloController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
+<VBox alignment="CENTER" minHeight="600.0" minWidth="500.0" prefHeight="498.0" prefWidth="598.0" spacing="20.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafxdemo.HelloController">
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+    </padding>
+   <Label text="Word Frequency">
+      <font>
+         <Font name="System Bold" size="18.0" />
+      </font></Label>
+   <HBox alignment="CENTER_LEFT" minHeight="50.0" minWidth="-Infinity" prefHeight="50.0" prefWidth="200.0" spacing="10.0">
+      <children>
+         <Label text="Document Address">
+            <font>
+               <Font name="System Bold" size="12.0" />
+            </font>
+         </Label>
+         <TextField fx:id="Address" prefWidth="410.0" />
+      </children>
+   </HBox>
+   <HBox alignment="CENTER_LEFT" minHeight="50.0" prefHeight="50.0" prefWidth="200.0" spacing="10.0">
+      <children>
+         <Label text="Table Name">
+            <font>
+               <Font name="System Bold" size="12.0" />
+            </font>
+         </Label>
+         <TextField fx:id="TableName" minWidth="100.0" prefWidth="450.0" />
+      </children>
+   </HBox>
+   <HBox alignment="CENTER_LEFT" minHeight="50.0" prefHeight="50.0" prefWidth="200.0" spacing="10.0">
+      <children>
+         <Label text="Total Words">
+            <font>
+               <Font name="System Bold" size="12.0" />
+            </font>
+         </Label>
+         <TextField fx:id="totalWords" accessibleRole="DECREMENT_BUTTON" minWidth="100.0" prefWidth="450.0" />
+      </children>
+   </HBox>
+   <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0">
+     <columns>
+       <TableColumn fx:id="number" minWidth="50.0" prefWidth="50.0" text="#" />
+       <TableColumn fx:id="words" minWidth="-1.0" prefWidth="200.0" text="Words" />
+         <TableColumn fx:id="Frequency" minWidth="70.0" prefWidth="70.0" text="Frequency" />
+     </columns>
+   </TableView>
+    <Button fx:id="check" alignment="CENTER" onAction="#onCheckButtonClick" text="CHECK" textFill="DARKBLUE" />
 </VBox>
